Documentation, added isSIMDAvailable() (mostly for testing)